Crash when joining objects with shape keys #60795

Closed
opened 2019-01-23 16:13:43 +01:00 by lucas veber · 7 comments

System Information
Operating system: Win10
Graphics card: Gtx 980

Blender Version
Broken: Latest 2.8 build

Short description of error
When joining two objects that contain shape keys, Blender crashes

Exact steps for others to reproduce the error

  • Open the following blend
    join_objects_shapes.blend
  • The two objects contain shape keys. They are selected. Press Ctr-J to join them.
  • It should crash instantly, if not, it should crash the second time (File > Revert and try again)
**System Information** Operating system: Win10 Graphics card: Gtx 980 **Blender Version** Broken: Latest 2.8 build **Short description of error** When joining two objects that contain shape keys, Blender crashes **Exact steps for others to reproduce the error** - Open the following blend [join_objects_shapes.blend](https://archive.blender.org/developer/F6379766/join_objects_shapes.blend) - The two objects contain shape keys. They are selected. Press Ctr-J to join them. - It should crash instantly, if not, it should crash the second time (File > Revert and try again)
Author

Added subscriber: @LucasVeber

Added subscriber: @LucasVeber
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

this was still working in 7c438e5366, bisecting...

this was still working in 7c438e5366, bisecting...
Bastien Montagne was assigned by Philipp Oeser 2019-01-24 10:04:31 +01:00
Member

Added subscriber: @mont29

Added subscriber: @mont29
Member

Turns out since cae3750ff9 we are asserting in undo here

BLI_assert((id->tag & (LIB_TAG_NO_MAIN | LIB_TAG_NO_USER_REFCOUNT | LIB_TAG_NOT_ALLOCATED)) == 0);


1  raise                                                  0x7ffff466953f 
2  abort                                                  0x7ffff4653895 
3  write_file_handle               writefile.c       3892 0x290fa64      
4  BLO_write_file_mem              writefile.c       4234 0x29108b0      
5  BKE_memfile_undo_encode         blender_undo.c    128  0x29f0008      
6  memfile_undosys_step_encode     memfile_undo.c    84   0x1cbcb77      
7  undosys_step_encode             undo_system.c     151  0x2c45386      
8  BKE_undosys_step_push_with_type undo_system.c     502  0x2c46a2d      
9  BKE_undosys_step_push           undo_system.c     522  0x2c46b52      
10 ED_undo_push                    ed_undo.c         103  0x1cbb5ee      
11 ED_undo_push_op                 ed_undo.c         250  0x1cbbcb4      
12 wm_operator_finished            wm_event_system.c 888  0x1c7be3a     

caused by change from
BKE_libblock_free_ex(bmain, nkey, false, false);
to
BKE_id_free_ex(bmain, nkey, LIB_ID_FREE_NO_UI_USER | LIB_ID_FREE_NO_USER_REFCOUNT, false);

@mont29: guess this is in good hands with you?

Turns out since cae3750ff9 we are asserting in undo here BLI_assert((id->tag & (LIB_TAG_NO_MAIN | LIB_TAG_NO_USER_REFCOUNT | LIB_TAG_NOT_ALLOCATED)) == 0); ``` 1 raise 0x7ffff466953f 2 abort 0x7ffff4653895 3 write_file_handle writefile.c 3892 0x290fa64 4 BLO_write_file_mem writefile.c 4234 0x29108b0 5 BKE_memfile_undo_encode blender_undo.c 128 0x29f0008 6 memfile_undosys_step_encode memfile_undo.c 84 0x1cbcb77 7 undosys_step_encode undo_system.c 151 0x2c45386 8 BKE_undosys_step_push_with_type undo_system.c 502 0x2c46a2d 9 BKE_undosys_step_push undo_system.c 522 0x2c46b52 10 ED_undo_push ed_undo.c 103 0x1cbb5ee 11 ED_undo_push_op ed_undo.c 250 0x1cbbcb4 12 wm_operator_finished wm_event_system.c 888 0x1c7be3a ``` caused by change from `BKE_libblock_free_ex(bmain, nkey, false, false);` to `BKE_id_free_ex(bmain, nkey, LIB_ID_FREE_NO_UI_USER | LIB_ID_FREE_NO_USER_REFCOUNT, false);` @mont29: guess this is in good hands with you?

This issue was referenced by 6ff4babfd4

This issue was referenced by 6ff4babfd420aa9697bfab193577f879db414265

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60795
No description provided.